--- a/Crawling/네이버_헤드라인_뉴스_크롤링.ipynb
+++ b/Crawling/네이버_헤드라인_뉴스_크롤링.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,27 +53,27 @@
        "[<div class=\"hdline_news\">\n",
        " <div class=\"hdline_flick\">\n",
        " <div class=\"hdline_flick_item\" style=\"display:block\">\n",
-       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '8800011E_000000000000000002216720', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=105&amp;oid=092&amp;aid=0002216720\">\n",
-       " <img alt=\"한전, 2분기 전기료 동결…\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/092/2021/03/22/0002216720_001_20210322142902700.jpg?type=nf300_190\" width=\"300\" 물가=\"\" 부담\"\"=\"\" 상승에=\"\" 인상은=\"\"/>\n",
+       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '880000D1_000000000000000003172867', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=101&amp;oid=081&amp;aid=0003172867\">\n",
+       " <img alt=\"4월 선거 의식했나… 유가 올랐지만 2분기 전기료 안 올린다\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/081/2021/03/23/0003172867_001_20210323050758389.jpg?type=nf300_190\" width=\"300\"/>\n",
        " <div class=\"hdline_flick_mask\">\n",
-       " <p class=\"hdline_flick_tit\">한전, 2분기 전기료 동결…\"물가 상승에 인상은 …</p>\n",
+       " <p class=\"hdline_flick_tit\">4월 선거 의식했나… 유가 올랐지만 2분기 전기…</p>\n",
        " </div>\n",
        " </a>\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '8800011E_000000000000000002216720', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103220010_00000641&amp;mode=LSD&amp;mid=shm&amp;oid=092&amp;aid=0002216720\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D1_000000000000000003172867', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103220010_00000641&amp;mode=LSD&amp;mid=shm&amp;oid=081&amp;aid=0003172867\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">70</span>\n",
+       " <span class=\"cluster_more_icon_num\">74</span>\n",
        " </a>\n",
        " </div>\n",
        " <div class=\"hdline_flick_item\" style=\"display:none\">\n",
-       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '08138260_000000000000000000261986', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=437&amp;aid=0000261986\">\n",
-       " <img alt=\" 오세훈·안철수 누가 단일후보 돼도 박영선에 크게 앞서[JTBC 여론조사]\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/437/2021/03/22/0000261986_001_20210322195233807.jpg?type=nf300_190\" width=\"300\"/>\n",
+       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '880000D8_000000000000000012276606', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=001&amp;aid=0012276606\">\n",
+       " <img alt=\"요양병원 만 65세 이상 AZ백신 접종 시작…문대통령도 오늘 접종\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/001/2021/03/23/PYH2021031809070001300_P4_20210323043102548.jpg?type=nf300_190\" width=\"300\"/>\n",
        " <div class=\"hdline_flick_mask\">\n",
-       " <p class=\"hdline_flick_tit\"> 오세훈·안철수 누가 단일후보 돼도 박영선에 …</p>\n",
+       " <p class=\"hdline_flick_tit\">요양병원 만 65세 이상 AZ백신 접종 시작…문대…</p>\n",
        " </div>\n",
        " </a>\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '08138260_000000000000000000261986', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103211910_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=437&amp;aid=0000261986\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D8_000000000000000012276606', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103210830_00000099&amp;mode=LSD&amp;mid=shm&amp;oid=001&amp;aid=0012276606\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">98</span>\n",
+       " <span class=\"cluster_more_icon_num\">79</span>\n",
        " </a>\n",
        " </div>\n",
        " <div class=\"hdline_flick_navi\">\n",
@@ -83,66 +83,66 @@
        " <ul class=\"hdline_article_list\">\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '08138263_000000000000000005237993', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=421&amp;aid=0005237993\">\n",
-       "                                         새 대법관 후보에 봉욱·천대엽·손봉기 추천…檢 출신 1명, 현직 판사 2명\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000FF_000000000000000004605883', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=014&amp;aid=0004605883\">\n",
+       "                                         \"술 취한 의사가 수술해 아기 잃었다\" 경찰 수사 나서\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '08138263_000000000000000005237993', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103221710_00000006&amp;mode=LSD&amp;mid=shm&amp;oid=421&amp;aid=0005237993\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000FF_000000000000000004605883', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103220810_00000026&amp;mode=LSD&amp;mid=shm&amp;oid=014&amp;aid=0004605883\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">41</span>\n",
+       " <span class=\"cluster_more_icon_num\">36</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '08138262_000000000000000000476877', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=422&amp;aid=0000476877\">\n",
-       "                                         문대통령 \"내일 AZ백신 접종…안전성 의심 말아달라\"\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000AF_000000000000000001565876', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=052&amp;aid=0001565876\">\n",
+       "                                         서울시장 야권 단일 후보 오늘 발표...여론조사 조기 마감\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '08138262_000000000000000000476877', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103201730_00000380&amp;mode=LSD&amp;mid=shm&amp;oid=422&amp;aid=0000476877\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000AF_000000000000000001565876', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103211910_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=052&amp;aid=0001565876\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">55</span>\n",
+       " <span class=\"cluster_more_icon_num\">124</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000BC_000000000000000004767306', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=009&amp;aid=0004767306\">\n",
-       "                                         오세훈에 한방 날린 안철수 \"내곡동 문제로 사퇴할수도\"\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000D2_000000000000000003563733', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=022&amp;aid=0003563733\">\n",
+       "                                         시진핑, 김정은에 구두친서… “새 형세 속 북중관계 발전 원해”\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000BC_000000000000000004767306', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103221020_00000111&amp;mode=LSD&amp;mid=shm&amp;oid=009&amp;aid=0004767306\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D2_000000000000000003563733', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103222050_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=022&amp;aid=0003563733\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">98</span>\n",
+       " <span class=\"cluster_more_icon_num\">29</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '88000114_000000000000000011011215', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=056&amp;aid=0011011215\">\n",
-       "                                         차세대중형위성 1호 발사 성공…오늘 밤 최종 교신 확인\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000A9_000000000000000003346044', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=020&amp;aid=0003346044\">\n",
+       "                                         박범계 “합동감찰, 용두사미로 안끝날것”… 또 검찰과 마찰 예고\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '88000114_000000000000000011011215', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103180730_00000075&amp;mode=LSD&amp;mid=shm&amp;oid=056&amp;aid=0011011215\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000A9_000000000000000003346044', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103111220_00001066&amp;mode=LSD&amp;mid=shm&amp;oid=020&amp;aid=0003346044\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">89</span>\n",
+       " <span class=\"cluster_more_icon_num\">115</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000D8_000000000000000012276287', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=001&amp;aid=0012276287\">\n",
-       "                                         '충수염 수술' 이재용…계열사 부당합병 첫 재판 연기\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '08138263_000000000000000005238407', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=421&amp;aid=0005238407\">\n",
+       "                                         문대통령, 오늘 AZ 만65세 이상 1호 접종…\"불안감 해소 솔선수범\"\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D8_000000000000000012276287', 'airsGParam', '0', 'news_global_v2.0', 'Tk2tThYMxNsBOx1m')\" href=\"/main/clusterArticles.nhn?id=c_202103200040_00000002&amp;mode=LSD&amp;mid=shm&amp;oid=001&amp;aid=0012276287\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '08138263_000000000000000005238407', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103201730_00000380&amp;mode=LSD&amp;mid=shm&amp;oid=421&amp;aid=0005238407\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">74</span>\n",
+       " <span class=\"cluster_more_icon_num\">60</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
@@ -150,7 +150,7 @@
        " </div>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,24 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'select_one'",
+     "ename": "NameError",
+     "evalue": "name 'title_p' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-0a4484a39921>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtitle_p\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_one\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.Ink_hdline_article nclicks..'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtitle_p\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'select_one'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-e6b9b9d392fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbook_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtitle_p\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbook_url\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'title_p' is not defined"
      ]
     }
    ],
    "source": [
-    "title_p = li.select_one('.Ink_hdline_article nclicks..')\n",
-    "title_p"
+    "book_url = title_p.find('a')['href']\n",
+    "book_url"
    ]
   },
   {
