--- a/Crawling/네이버_헤드라인_뉴스_크롤링.ipynb
+++ b/Crawling/네이버_헤드라인_뉴스_크롤링.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,27 +53,27 @@
        "[<div class=\"hdline_news\">\n",
        " <div class=\"hdline_flick\">\n",
        " <div class=\"hdline_flick_item\" style=\"display:block\">\n",
-       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '880000D1_000000000000000003172867', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=101&amp;oid=081&amp;aid=0003172867\">\n",
-       " <img alt=\"4월 선거 의식했나… 유가 올랐지만 2분기 전기료 안 올린다\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/081/2021/03/23/0003172867_001_20210323050758389.jpg?type=nf300_190\" width=\"300\"/>\n",
+       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '88000114_000000000000000011012574', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=101&amp;oid=056&amp;aid=0011012574\">\n",
+       " <img alt=\"외국계 대기업 탈세 적발…“회사형태 바꿔서 감사 피하고 본사에 거액 송금”\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/056/2021/03/24/0011012574_001_20210324120516517.jpg?type=nf300_190\" width=\"300\"/>\n",
        " <div class=\"hdline_flick_mask\">\n",
-       " <p class=\"hdline_flick_tit\">4월 선거 의식했나… 유가 올랐지만 2분기 전기…</p>\n",
+       " <p class=\"hdline_flick_tit\">외국계 대기업 탈세 적발…“회사형태 바꿔서 감…</p>\n",
        " </div>\n",
        " </a>\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D1_000000000000000003172867', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103220010_00000641&amp;mode=LSD&amp;mid=shm&amp;oid=081&amp;aid=0003172867\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '88000114_000000000000000011012574', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103241210_00000003&amp;mode=LSD&amp;mid=shm&amp;oid=056&amp;aid=0011012574\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">74</span>\n",
+       " <span class=\"cluster_more_icon_num\">21</span>\n",
        " </a>\n",
        " </div>\n",
        " <div class=\"hdline_flick_item\" style=\"display:none\">\n",
-       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '880000D8_000000000000000012276606', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=001&amp;aid=0012276606\">\n",
-       " <img alt=\"요양병원 만 65세 이상 AZ백신 접종 시작…문대통령도 오늘 접종\" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/001/2021/03/23/PYH2021031809070001300_P4_20210323043102548.jpg?type=nf300_190\" width=\"300\"/>\n",
+       " <a class=\"lnk_hdline_main_article nclicks('mai.image', '880000AF_000000000000000001566411', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=052&amp;aid=0001566411\">\n",
+       " <img alt=\"박영선, 故 박원순 두둔한 임종석에 \" height=\"190\" onerror=\"javascript:this.src='https://ssl.pstatic.net/static.news/image/news/2009/noimage_300x190.png';\" src=\"https://imgnews.pstatic.net/image/052/2021/03/24/202103241005086346_d_20210324100734669.jpg?type=nf300_190\" width=\"300\" 자제해달라\"\"=\"\"/>\n",
        " <div class=\"hdline_flick_mask\">\n",
-       " <p class=\"hdline_flick_tit\">요양병원 만 65세 이상 AZ백신 접종 시작…문대…</p>\n",
+       " <p class=\"hdline_flick_tit\">박영선, 故 박원순 두둔한 임종석에 \"자제해달라…</p>\n",
        " </div>\n",
        " </a>\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D8_000000000000000012276606', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103210830_00000099&amp;mode=LSD&amp;mid=shm&amp;oid=001&amp;aid=0012276606\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000AF_000000000000000001566411', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103240940_00000003&amp;mode=LSD&amp;mid=shm&amp;oid=052&amp;aid=0001566411\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">79</span>\n",
+       " <span class=\"cluster_more_icon_num\">50</span>\n",
        " </a>\n",
        " </div>\n",
        " <div class=\"hdline_flick_navi\">\n",
@@ -83,66 +83,66 @@
        " <ul class=\"hdline_article_list\">\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000FF_000000000000000004605883', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=014&amp;aid=0004605883\">\n",
-       "                                         \"술 취한 의사가 수술해 아기 잃었다\" 경찰 수사 나서\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000A9_000000000000000003346505', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=020&amp;aid=0003346505\">\n",
+       "                                         부산대 “조국 딸 의전원 입학 취소 여부, 조속히 결론 내겠다”\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000FF_000000000000000004605883', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103220810_00000026&amp;mode=LSD&amp;mid=shm&amp;oid=014&amp;aid=0004605883\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000A9_000000000000000003346505', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103221340_00000453&amp;mode=LSD&amp;mid=shm&amp;oid=020&amp;aid=0003346505\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">36</span>\n",
+       " <span class=\"cluster_more_icon_num\">88</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000AF_000000000000000001565876', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=052&amp;aid=0001565876\">\n",
-       "                                         서울시장 야권 단일 후보 오늘 발표...여론조사 조기 마감\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000D1_000000000000000003173303', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=081&amp;aid=0003173303\">\n",
+       "                                         산부인과 기록 없는 구미 여아 친모 ‘셀프 출산’ 검색\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000AF_000000000000000001565876', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103211910_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=052&amp;aid=0001565876\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D1_000000000000000003173303', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103102200_00000032&amp;mode=LSD&amp;mid=shm&amp;oid=081&amp;aid=0003173303\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">124</span>\n",
+       " <span class=\"cluster_more_icon_num\">78</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000D2_000000000000000003563733', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=022&amp;aid=0003563733\">\n",
-       "                                         시진핑, 김정은에 구두친서… “새 형세 속 북중관계 발전 원해”\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '8800006F_000000000000000001423404', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=005&amp;aid=0001423404\">\n",
+       "                                         눈치봤나 모른 척 했나… 정부, 뒤늦게 북한 미사일 발사 시인\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000D2_000000000000000003563733', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103222050_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=022&amp;aid=0003563733\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '8800006F_000000000000000001423404', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103240450_00000001&amp;mode=LSD&amp;mid=shm&amp;oid=005&amp;aid=0001423404\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">29</span>\n",
+       " <span class=\"cluster_more_icon_num\">106</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000A9_000000000000000003346044', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=020&amp;aid=0003346044\">\n",
-       "                                         박범계 “합동감찰, 용두사미로 안끝날것”… 또 검찰과 마찰 예고\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '88127058_000000000000000000689654', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=366&amp;aid=0000689654\">\n",
+       "                                         文 대통령 주사기 바꿔치기 의혹에…진중권 \"음모론 믿는 게 더 멍청\"\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000A9_000000000000000003346044', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103111220_00001066&amp;mode=LSD&amp;mid=shm&amp;oid=020&amp;aid=0003346044\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '88127058_000000000000000000689654', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103232210_00000036&amp;mode=LSD&amp;mid=shm&amp;oid=366&amp;aid=0000689654\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">115</span>\n",
+       " <span class=\"cluster_more_icon_num\">26</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
        " <li>\n",
        " <div class=\"hdline_article_tit\">\n",
-       " <a class=\"lnk_hdline_article nclicks('mai.text1', '08138263_000000000000000005238407', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=100&amp;oid=421&amp;aid=0005238407\">\n",
-       "                                         문대통령, 오늘 AZ 만65세 이상 1호 접종…\"불안감 해소 솔선수범\"\n",
+       " <a class=\"lnk_hdline_article nclicks('mai.text1', '880000E3_000000000000000002306640', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/read.nhn?mode=LSD&amp;mid=shm&amp;sid1=102&amp;oid=047&amp;aid=0002306640\">\n",
+       "                                         재판 연기 비판한 오거돈 성폭력 사건 피해자\n",
        "                                     </a>\n",
        " </div>\n",
        " <div class=\"hdline_cluster_more\">\n",
-       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '08138263_000000000000000005238407', 'airsGParam', '0', 'news_global_v2.0', 'mAUnmJIwhhYSE4R0')\" href=\"/main/clusterArticles.nhn?id=c_202103201730_00000380&amp;mode=LSD&amp;mid=shm&amp;oid=421&amp;aid=0005238407\">\n",
+       " <a class=\"lnk_hdline_cluster_more nclicks('mai.clu', '880000E3_000000000000000002306640', 'airsGParam', '0', 'news_global_v2.0', 'gRr86fKd5hC8CxWo')\" href=\"/main/clusterArticles.nhn?id=c_202103221450_00000002&amp;mode=LSD&amp;mid=shm&amp;oid=047&amp;aid=0002306640\">\n",
        " <span class=\"blind\">관련기사 개수</span>\n",
-       " <span class=\"cluster_more_icon_num\">60</span>\n",
+       " <span class=\"cluster_more_icon_num\">30</span>\n",
        " </a>\n",
        " </div>\n",
        " </li>\n",
@@ -150,7 +150,7 @@
        " </div>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,23 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'title_p' is not defined",
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'find'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-e6b9b9d392fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbook_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtitle_p\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbook_url\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'title_p' is not defined"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-873603ccdbee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbook_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'href'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbook_url\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\envs\\tf2\\lib\\site-packages\\bs4\\element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2172\u001b[0m         \u001b[1;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2173\u001b[0m         raise AttributeError(\n\u001b[1;32m-> 2174\u001b[1;33m             \u001b[1;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2175\u001b[0m         )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: ResultSet object has no attribute 'find'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
      ]
     }
    ],
    "source": [
-    "book_url = title_p.find('a')['href']\n",
+    "book_url = lis.find('a')['href']\n",
     "book_url"
    ]
   },
